@@ -1,5 +1,6 @@
+import itertools
 from datetime import date
-
+from DateTime import DateTime
 from Acquisition import aq_inner
 from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone.utils import safe_unicode
@@ -8,8 +9,26 @@ from plone.memoize.view import memoize
 from zope.interface import implements
 
 from Products.eXtremeManagement.browser.bookings import WeekBookingOverview
+try:
+    from Products.eXtremeManagement.utils import getNextYearMonth
+    from Products.eXtremeManagement.utils import getPrevYearMonth
+    from Products.eXtremeManagement.utils import getEndOfMonth
+except ImportError:
+    # BBB for Products.eXtremeManagement before 2.0 beta 1
+    from Products.eXtremeManagement.browser.bookings import getNextYearMonth
+    from Products.eXtremeManagement.browser.bookings import getPrevYearMonth
+    from Products.eXtremeManagement.browser.bookings import getEndOfMonth
+
 from xm.theme import xmMessageFactory as _
 from interfaces import IEmployeesView
+
+
+def booking_date(brain):
+    return brain.getBookingDate.earliestTime()
+
+
+def fmt_perc_billable(perc):
+    return "%0.1f" % perc + ' %'
 
 
 class EmployeesView(BrowserView):
@@ -24,6 +43,7 @@ class EmployeesView(BrowserView):
         self.site_url = portal_url()
         self.catalog = getToolByName(context, 'portal_catalog')
         self.mtool = getToolByName(context, 'portal_membership')
+        self.searchpath = '/'.join(context.getPhysicalPath())
         today = date.today()
         self.months = []
         # months is a list of date objects of the past 12 months
@@ -39,6 +59,69 @@ class EmployeesView(BrowserView):
 
     @memoize
     def items(self):
+        context = aq_inner(self.context)
+        propstool = getToolByName(context, 'portal_properties')
+        hours_per_day = propstool.xm_properties.getProperty('hours_per_day')
+        data = []
+        employees = self.get_employees()
+        for userid in employees:
+            empldict = {}
+            memberinfo = self.mtool.getMemberInfo(userid)
+            if memberinfo and memberinfo is not None:
+                empldict['name'] = memberinfo['fullname']
+                # For each month create a list employees in a dict with
+                # percentages and a url to the month view.
+                results = []
+                for m in self.months:
+                    begin = DateTime(m.year, m.month, 1)
+                    end = getEndOfMonth(m.year, m.month)
+                    bookingbrains = self.catalog.searchResults(
+                        portal_type='Booking',
+                        getBookingDate={"query": [begin, end],
+                                        "range": "minmax",
+                                        "sort_on": "getBookingDate"},
+                        Creator=userid,
+                        path=self.searchpath)
+                    # Hm, it does not look like sort_on is working so
+                    # we do it ourselves.
+                    bookingbrains = sorted(bookingbrains, key=booking_date)
+                    grouped = itertools.groupby(bookingbrains, booking_date)
+                    billable = []
+                    for day, bookings in grouped:
+                        day_billable = 0.0
+                        day_total = 0.0
+                        for bb in bookings:
+                            day_total += bb.actual_time
+                            if bb.getBillable:
+                                day_billable += bb.actual_time
+                        # XXX Turn this into 1 hour.
+                        if day_total >= 0:
+                            # If the employee worked 1 hour or less we
+                            # assume it is just an hour on Saturday or
+                            # something and we ignore this day to
+                            # avoid unnecessarily influencing the
+                            # billable percentage negatively.  If he
+                            # worked more, we assume it is a full day.
+                            billable.append(day_billable)
+                    days_worked = len(billable)
+                    if days_worked > 0:
+                        total = sum(billable)
+                        perc = 100 * (total / hours_per_day) / days_worked
+                    else:
+                        perc = 0.0
+                    url = "%s/booking_month?memberid=%s&month=%r&year=%r" % (
+                        self.site_url, userid, m.month, m.year)
+                    perc_dict = dict(percentage = fmt_perc_billable(perc),
+                                     url = url)
+                    results.append(perc_dict)
+                results.reverse()
+                empldict['monthly_percentages'] = results
+            data.append(empldict)
+
+        return data
+
+    @memoize
+    def olditems(self):
         context = aq_inner(self.context)
         data = []
         employees = self.get_employees()
